LIVIJUKU-253 - checkboxien tyylit kuntoon

--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -85,9 +85,9 @@
     <div class="row">
       <div class="col-md-12">
         <div class="form-group">
-          <label>
-            <input type="checkbox" ng-model="alv"><span>Haluan katsoa arvoja arvonlisäverollisina.</span>
-          </label>
+          <juku-checkbox ng-model="alv">
+            Haluan katsoa arvoja arvonlisäverollisina.
+          </juku-checkbox>
         </div>
       </div>
     </div>
