--- a/app/scripts/views/hakija/hakemus.html
+++ b/app/scripts/views/hakija/hakemus.html
@@ -89,14 +89,9 @@
         <div class="row">
           <div class="col-md-12">
             <div class="form-group">
-              <label ng-show="hakemusKeskenerainen()">
-                <input type="checkbox" ng-model="alv">
-                <span>Haluan syöttää summat arvonlisäverollisina.</span>
-              </label>
-              <label ng-hide="hakemusKeskenerainen()">
-                <input type="checkbox" ng-model="alv">
-                <span>Haluan katsoa arvoja arvonlisäverollisina.</span>
-              </label>
+              <juku-checkbox ng-model="alv">
+                Haluan {{ hakemusKeskenerainen() ? "syöttää summat" : "katsoa arvoja" }} arvonlisäverollisina.
+              </juku-checkbox>
             </div>
           </div>
         </div>
