LIVIJUKU-337 Suunnittelunäkymässä pitää olla näkyvissä "tila" ja "haettu avustus" -sarakkeet

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -27,85 +27,92 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-4">
-        <label>Määräraha vuosi {{vuosi}}</label>
-        <input type="text" min="-0.0001" ng-currency="" class="form-control"
-               ng-focus="asetaVanhaArvo(maararaha)"
-               ng-model="maararaha"
-               ng-blur="paivitaKokonaismaararaha('maararaha')" select-on-click/>
+    <form name="suunnitteluForm">
+      <div class="row">
+        <div class="col-md-4">
+          <label>Määräraha vuosi {{vuosi}}</label>
+          <input name="maararaha" type="text" min="-0.0001" ng-currency="" class="form-control"
+                 ng-focus="asetaVanhaArvo(maararaha)"
+                 ng-model="maararaha"
+                 ng-blur="paivitaKokonaismaararaha('maararaha')" select-on-click/>
+        </div>
+        <div class="col-md-4">
+          <label>Siirtomääräraha vuodelta {{vuosi-1}}</label>
+          <input name="ylijaama" type="text" min="-0.0001" ng-currency="" class="form-control"
+                 ng-focus="asetaVanhaArvo(ylijaama)"
+                 ng-model="ylijaama"
+                 ng-blur="paivitaKokonaismaararaha('ylijaama')" select-on-click/>
+        </div>
+        <div class="col-md-4">
+          <label>YHTEENSÄ</label>
+          <input type="text" min="-0.0001" ng-currency="" class="form-control"
+                 ng-model="jaettavaraha" disabled/>
+        </div>
       </div>
-      <div class="col-md-4">
-        <label>Siirtomääräraha vuodelta {{vuosi-1}}</label>
-        <input type="text" min="-0.0001" ng-currency="" class="form-control"
-               ng-focus="asetaVanhaArvo(ylijaama)"
-               ng-model="ylijaama"
-               ng-blur="paivitaKokonaismaararaha('ylijaama')" select-on-click/>
-      </div>
-      <div class="col-md-4">
-        <label>YHTEENSÄ</label>
-        <input type="text" min="-0.0001" ng-currency="" class="form-control"
-               ng-model="jaettavaraha" disabled/>
-      </div>
-    </div>
-    <table st-table="hakemuksetSuunnittelu" class="table table-hover table-condensed table-striped">
-      <thead>
-      <tr>
-        <th>Hakija</th>
-        <th>Haettu avustus</th>
-        <th>Muutos</th>
-        <th>Myönnettävä avustus</th>
-        <th></th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr ng-repeat="hakemus in hakemuksetSuunnittelu">
-        <td>{{hakemus.hakija}}</td>
-        <td>
-          <div ng-show="(hakemusTarkastettu(hakemus) || hakemusPaatetty(hakemus))">
-            {{hakemus.haettuAvustus|currency:"&euro;"}}
-          </div>
-          <div ng-hide="(hakemusTarkastettu(hakemus) || hakemusPaatetty(hakemus))">
+      <table st-table="hakemuksetSuunnittelu" class="table table-hover table-condensed table-striped">
+        <thead>
+        <tr>
+          <th>Hakija</th>
+          <th>Tila</th>
+          <th>Haettu avustus</th>
+          <th>Muutos</th>
+          <th>Myönnettävä avustus</th>
+          <th></th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="hakemus in hakemuksetSuunnittelu">
+          <td>{{hakemus.hakija}}</td>
+          <td>
             <hakemus-label tila="{{hakemus.hakemuksenTila}}"></hakemus-label>
-          </div>
-        </td>
-        <td>{{hakemus.muutos|currency:"&euro;"}}</td>
-        <td>
-          <div ng-show="hakemusPaatetty(hakemus)">
-            <p>{{hakemus.myonnettavaAvustus|currency:"&euro;"}}</p>
-          </div>
-          <div ng-hide="hakemusPaatetty(hakemus)">
-            <input id="avustus_{{hakemus.hakemusId}}" type="text" min="-0.0001" ng-currency="" class="form-control"
-                   ng-model="hakemus.myonnettavaAvustus"
-                   ng-focus="asetaVanhaArvo(hakemus.myonnettavaAvustus)"
-                   ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)" select-on-click/>
-          </div>
-        </td>
-        <td>
-          <div ng-show="hakemusPaatetty(hakemus)">
-            <button class="btn btn-success"
-                    ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.haettuAvustus, hakemus.myonnettavaAvustus)">
-              Päätetty<span
-              class='glyphicon glyphicon-play'/>
-            </button>
-          </div>
-          <div ng-hide="hakemusPaatetty(hakemus)">
-            <juku-link-next
+          </td>
+          <td>
+            <div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.haettuAvustus|currency:"&euro;"}}</div>
+            <div ng-show="hakemusKeskenerainen(hakemus)"><hr></div>
+          </td>
+          <td><div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.muutos|currency:"&euro;"}}</div></td>
+          <td>
+            <div ng-show="hakemusPaatetty(hakemus)">
+              <p>{{hakemus.myonnettavaAvustus|currency:"&euro;"}}</p>
+            </div>
+            <div ng-hide="hakemusPaatetty(hakemus) || hakemusKeskenerainen(hakemus)" class="form-group" show-errors="{showSuccess: true}">
+              <input id="avustus_{{hakemus.hakemusId}}" name="avustus_{{hakemus.hakemusId}}" type="text" min="-0.0001"
+                     ng-currency="" class="form-control"
+                     ng-model="hakemus.myonnettavaAvustus"
+                     ui-validate="{sallittuAvustus: 'sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)'}"
+                     ng-focus="asetaVanhaArvo(hakemus.myonnettavaAvustus)"
+                     ng-blur="paivitaAvustus(hakemus.myonnettavaAvustus,hakemus.hakemusId)" select-on-click/>
+              <span ng-hide="sallittuAvustus(hakemus.myonnettavaAvustus,hakemus.haettuAvustus, hakemus.hakemuksenTila)"
+                    class="help-block ng-invalid-sallittu-avustus">Myönnettävän avustuksen<br>tulee olla
+                positiivinen<br>arvo ja suurimmillaan <br>haetun avustuksen suuruinen</span>
+            </div>
+          </td>
+          <td>
+            <div ng-show="hakemusPaatetty(hakemus)">
+              <juku-link-next
                 ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.haettuAvustus, hakemus.myonnettavaAvustus)">
-              Päätöksentekoon
-            </juku-link-next>
-          </div>
-        </td>
-      </tr>
-      <tr>
-        <td>Yhteensä</td>
-        <td>{{haettuAvustusSum|currency:"&euro;"}}</td>
-        <td>{{muutosSum|currency:"&euro;"}}</td>
-        <td>{{myonnettavaAvustusSum|currency:"&euro;"}}</td>
-        <td></td>
-      </tr>
-      </tbody>
-    </table>
+                Päätetty
+              </juku-link-next>
+            </div>
+            <div ng-hide="hakemusPaatetty(hakemus) || hakemusKeskenerainen(hakemus)">
+              <juku-link-next
+                ng-click="siirryPaatokseen(hakemus.hakemusId,hakemus.haettuAvustus, hakemus.myonnettavaAvustus)">
+                Päätöksentekoon
+              </juku-link-next>
+            </div>
+          </td>
+        </tr>
+        <tr>
+          <td>Yhteensä</td>
+          <td></td>
+          <td>{{haettuAvustusSum|currency:"&euro;"}}</td>
+          <td>{{muutosSum|currency:"&euro;"}}</td>
+          <td>{{myonnettavaAvustusSum|currency:"&euro;"}}</td>
+          <td></td>
+        </tr>
+        </tbody>
+      </table>
+    </form>
     <div class="row">
       <div class="col-md-12">
         <juku-link-prev href="#/k/hakemukset/{{tyyppi}}">
