--- a/app/styles/_components.styl
+++ b/app/styles/_components.styl
@@ -26,3 +26,5 @@
 @import '../scripts/components/avustuskohde'
 @import '../scripts/components/userDropdown'
 @import '../scripts/components/ohje'
+@import '../scripts/components/fileDetails'
+@import '../scripts/components/fileActions'
