LIVIJUKU-337 Suunnittelunäkymässä pitää olla näkyvissä "tila" ja "haettu avustus" -sarakkeet

--- a/app/scripts/views/kasittelija/suunnittelu.html
+++ b/app/scripts/views/kasittelija/suunnittelu.html
@@ -68,7 +68,7 @@
           </td>
           <td>
             <div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.haettuAvustus|currency:"&euro;"}}</div>
-            <div ng-show="hakemusKeskenerainen(hakemus)"><hr></div>
+            <div ng-show="hakemusKeskenerainen(hakemus)">Ei tiedossa</div>
           </td>
           <td><div ng-hide="hakemusKeskenerainen(hakemus)">{{hakemus.muutos|currency:"&euro;"}}</div></td>
           <td>
