--- a/app/styles/styles.styl
+++ b/app/styles/styles.styl
@@ -247,5 +247,8 @@ textarea
 .avustuskohde .ng-invalid-sallittu-arvo-haettavaavustus.ng-dirty .help-block.ng-invalid-sallittu-arvo-haettavaavustus
   display: block
 
+.avustuskohde .ng-invalid-sallittu-arvo-haettavamaksatus.ng-dirty .help-block.ng-invalid-sallittu-arvo-haettavamaksatus
+  display: block
+
 .avustuskohde .ng-invalid-sallittu-arvo-omarahoitus.ng-dirty .help-block.ng-invalid-sallittu-arvo-omarahoitus
   display: block
