--- a/app/scripts/views/kasittelija/hakemus.html
+++ b/app/scripts/views/kasittelija/hakemus.html
@@ -63,7 +63,7 @@
   </juku-form-row>
   <juku-form-row ng-show="paatosOlemassa() && (onMaksatushakemus1() || onMaksatushakemus2())">
     <h5>MYÖNNETTY AVUSTUS AJALLE {{ajankohta}}{{vuosi}}</h5>
-    {{paatos.myonnettyavustus/2 | currency:"&euro;"}}
+    {{myonnettyAvustusPerJakso() | currency:"&euro;"}}
   </juku-form-row>
 
   <div class="row">
